--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,7 +1,7 @@
 :root{
     --primary-color: rgb(0, 0, 66);
     --secondary-color:lightblue;
-    --accent-color:blue;
+    --accent-color:rgb(71, 0, 0);
 }
 
 body{
@@ -20,6 +20,7 @@ body{
     padding-right:40px;
     color: rgb(255, 255, 255);
     align-items: baseline;
+    z-index: 10;
     /* margin-top: 20px; */
 }
 .menu-uno{
@@ -33,7 +34,7 @@ body{
     padding-inline: 20px;
 }
 .contact-us{
-    background-color: rgb(8, 163, 163);
+    background-color: var(--accent-color);
     border-radius: 30px;
     padding: 7px;
     font-size: smaller;
@@ -54,17 +55,39 @@ body{
     top: 5px;
 }
 .banner-section{
-    background-color: rgb(0, 153, 255);
-    background-image:url(../images/pic-1.jpg);
-    background-size: cover;
     /* display:grid; */
     /* grid-template-columns: 1fr 1fr; */
     width:100%;
-    height:80vh ;
+    height:90vh ;
     font-size: 20px;
     text-align: center;
+    position: relative;
+    z-index: 9;
     /* position: relative; */
     /* padding: 20px; */
+}
+.banner-section::before{
+    content:"";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right:0px;
+    background-color: #000;
+    z-index: -1;
+    opacity: 0.5;
+}
+.banner-section::after{
+    content:"";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right:0px;
+    background-color: #000;
+    background-image:url(../images/pic-1.jpg);
+    background-size: cover;
+    z-index: -2;
 }
 img{
     /* width: 400px; */
@@ -72,11 +95,41 @@ img{
 }
 .writeup-one{
     font-weight: bolder;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: rgb(0, 0, 71);
-    padding-top: 70px;
-    padding-right: 100px;
-    /* position: absolute; */
-    /* position:; */
+    font-size: 50px;
+    font-family:cursive;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
-
+.section-two{
+    /* background-color: var(--secondary-color); */
+    padding:100px 20px;
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.section-two-writeup{
+    /* justify-content: space-between; */
+    /* width:40%; */
+    font-size: 29px;
+    /* color: var(--primary-color); */
+    text-align: left;
+    padding-left: 50px;
+}
+img{
+    /* border-radius: 20px; */
+    width:100%
+}
+.section-two-writeup h4{
+    font-size: 1.5em;
+    margin-bottom: 0px;
+}
+.section-two-writeup button{
+    padding:10px 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: var(--accent-color);
+    color: #fff;
+}
