updated website responsiveness
changes to section-two + navigation bar

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -387,7 +387,9 @@ img{
     }
     .hamburger_button{
         display: block;
-        
+    }
+    .section-two{
+        grid-template-columns:  1fr;
     }
 }
 
