update on mobile responsiveness
contact us

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -390,6 +390,9 @@ img{
     .section-three{
         grid-template-columns: 1fr;
     }
+    .section-six{
+        grid-template-columns: 1fr;
+    }
 }
 
 
