mobile responsiveness update
update on footer

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -393,6 +393,12 @@ img{
     .section-six{
         grid-template-columns: 1fr;
     }
+    .footer{
+        grid-template-columns: 1fr;
+    }
+    .footersub_c{
+        grid-template-columns: 1fr;
+    }
 }
 
 
