--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -448,6 +448,9 @@ img{
     .image-grid{
         grid-template-columns: repeat(2, 1fr); 
     }
+    .image-grid>img{
+        height:250px;
+    }
     .footer_writeup1 div{
         padding-right: 0px;
     }
