--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -147,6 +147,14 @@ body{
 .mt-4 {
     margin-top: 4 !important;
   }
+  /* .bi::before {
+    display: inline-block;
+    content: "";
+    vertical-align: -.150em;
+    background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' d='M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z' clip-rule='evenodd'/></svg>");
+    background-repeat: no-repeat;
+    background-size: 1rem 1rem;
+  } */
 img{
     /* border-radius: 20px; */
     width:100%
